--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,27 @@ body {
     z-index: 2;
 }
 
+/* Imagen de fondo específica para cada página */
+#main-jumbotron {
+    background: url('images/inicio.jpg') no-repeat center center/cover;
+}
+
+#about-jumbotron {
+    background: url('images/aboutus.jpg') no-repeat center center/cover;
+}
+
+#companies-jumbotron {
+    background: url('images/companiescover.jpg') no-repeat center center/cover;
+}
+
+#team-jumbotron {
+    background: url('images/teamscover.jpg') no-repeat center center/cover;
+}
+
+#contact-jumbotron {
+    background: url('images/contactcover.jpg') no-repeat center center/cover;
+}
+
 .jumbotron h1 {
     font-family: 'Raleway', sans-serif;
     font-size: 4rem;
@@ -112,6 +133,19 @@ body {
 .card-body {
     padding: 2rem;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Ajustar el tamaño y alineación de las imágenes dentro de las tarjetas */
+.card img, .icon-box img {
+    width: 100%; /* Asegura que la imagen ocupe todo el ancho del contenedor */
+    height: 200px; /* Ajusta la altura de las imágenes para que sean uniformes */
+    object-fit: cover; /* Mantiene el aspecto de las imágenes y rellena el contenedor */
+    border-bottom: 2px solid #f5f5f5; /* Opcional: añadir un borde inferior para separación visual */
+    border-radius: 5px; /* Opcional: añadir bordes redondeados a las imágenes */
 }
 
 .card-body .icon-box i,
@@ -160,6 +194,45 @@ body {
     transform: scale(1.1);
 }
 
+/* Estilos para el formulario de contacto */
+.contact-form form {
+    background-color: #fff;
+    padding: 2em;
+    border-radius: 0.5em;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  }
+  
+  .contact-form .form-group label {
+    font-weight: 700;
+  }
+  
+  .contact-form .form-control {
+    margin-bottom: 1em;
+    padding: 0.75em;
+  }
+  
+  .contact-form button {
+    margin-top: 1em;
+  }
+  
+  /* Ajustes adicionales */
+.mt-5 {
+    margin-top: 3rem !important;
+  }
+  
+  .py-5 {
+    padding-top: 3rem !important;
+    padding-bottom: 3rem !important;
+  }
+  
+  .text-center {
+    text-align: center !important;
+  }
+  
+  .bg-light {
+    background-color: #f8f9fa !important;
+  }
+
 .footer {
     margin-top: 5rem;
     background-color: #333; /* Color de fondo del footer */
@@ -195,4 +268,50 @@ body {
 
 .back-to-top i {
     font-size: 1.2rem;
+}
+
+/* Estilos personalizados para la sección FAQ */
+.faq .card {
+    border: none;
+    margin-bottom: 1rem;
+    background-color: #fff;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+
+.faq .card-header {
+    background-color: #1a73e8;
+    color: #fff;
+    padding: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border-radius: 5px;
+}
+
+.faq .card-header:hover {
+    background-color: #1a73e8;
+}
+
+.faq .faq-btn {
+    color: #fff;
+    font-weight: 700;
+    text-align: left;
+    width: 100%;
+    text-decoration: none;
+}
+
+.faq .faq-btn:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.faq .collapse.show .card-body {
+    border-top: 2px solid #1a73e8;
+    padding: 1rem 2rem;
+}
+
+.faq .card-body {
+    background-color: #f8f9fa;
+    color: #333;
+    padding: 1rem 2rem;
 }
